starstream-compiler/src/typecheck/snapshots/starstream_compiler__typecheck__tests__unsupported_type_feature_error.snap
---
source: starstream-compiler/src/typecheck/tests.rs
description: "Source:\n\nfn takes(value: Box<i64>) {\n    value;\n}\n"
---
starstream::type::unsupported_type_feature

  x unsupported type feature: generic type parameters are not supported yet
   ,-[test.star:1:17]
 1 | fn takes(value: Box<i64>) {
   :                 ^^^
 2 |     value;
   `----
  help: remove `<...>` until generics are implemented
